PUT takes path params instead of query params
